--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Client-side css variables support for IE",
   "main": "index.js",
   "scripts": {
-    "build": "gulp",
+    "build": "rollup -c",
     "test": "standard"
   },
   "repository": {
@@ -21,10 +21,9 @@
   "devDependencies": {
     "@babel/core": "^7.10.0",
     "@babel/preset-env": "^7.10.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2",
+    "@rollup/plugin-babel": "^5.0.2",
+    "rollup": "^2.11.2",
+    "rollup-plugin-terser": "^6.1.0",
     "standard": "^14.3.4"
   }
 }
