--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "css-ie-vars-support",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Client-side css variables support for IE",
   "main": "index.js",
   "scripts": {
+    "prepare": "npm run build",
     "build": "rollup -c",
     "test": "standard"
   },
