--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "css-ie-vars-support",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Client-side css variables support for IE",
   "main": "index.js",
   "scripts": {
-    "prepare": "npm run build",
+    "prepare": "rimraf dist/*.js* && npm run build",
     "build": "rollup -c",
     "test": "standard"
   },
@@ -18,7 +18,9 @@
     "url": "https://github.com/owx940810/css-ie-vars-support/issues"
   },
   "homepage": "https://github.com/owx940810/css-ie-vars-support#readme",
-  "dependencies": {},
+  "dependencies": {
+    "rimraf": "^3.0.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.10.0",
     "@babel/preset-env": "^7.10.0",
@@ -26,5 +28,8 @@
     "rollup": "^2.11.2",
     "rollup-plugin-terser": "^6.1.0",
     "standard": "^14.3.4"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
